0028822: Configuration, XCAFDoc - fix name collision with macros GetObject()