src/XCAFDoc/XCAFDoc_Datum.hxx
@@ -27,6 +27,10 @@ class TDF_Attribute;
 class TDF_RelocationTable;
 class XCAFDimTolObjects_DatumObject;
 
+// resolve name collisions with WinAPI headers
+#ifdef GetObject
+  #undef GetObject
+#endif
 
 class XCAFDoc_Datum;
 DEFINE_STANDARD_HANDLE(XCAFDoc_Datum, TDF_Attribute)
@@ -66,15 +70,7 @@ public:
   
   Standard_EXPORT void Paste (const Handle(TDF_Attribute)& Into, const Handle(TDF_RelocationTable)& RT) const Standard_OVERRIDE;
 
-
-
-
   DEFINE_STANDARD_RTTIEXT(XCAFDoc_Datum,TDF_Attribute)
-
-protected:
-
-
-
 
 private:
 
@@ -83,14 +79,6 @@ private:
   Handle(TCollection_HAsciiString) myDescription;
   Handle(TCollection_HAsciiString) myIdentification;
 
-
-
 };
-
-
-
-
-
-
 
 #endif // _XCAFDoc_Datum_HeaderFile
